# personal-media-grap

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: labeler.yml
.github/workflows/: issue_label.yml  label.yml
docs/: environment-setup.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DetailPanel.tsx  GraphView.tsx  MediaCollection.tsx  Sidebar.tsx  Toolbar.tsx
src/data/: createRepository.ts  demoSeed.ts  id.ts  memoryRepository.test.ts  memoryRepository.ts  repository.ts  schema.ts  sqlRepository.ts  validation.ts
src/domain/: labels.ts  types.ts
src/hooks/: useMediaLibrary.ts
src/utils/: cover.ts
