[package]
name = "personal-media-graph"
version = "0.1.0"
description = "A local-first personal media knowledge graph."
authors = ["joeegin"]
edition = "2021"

[lib]
name = "personal_media_graph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
